setup game interface

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   </head>
 
   <body>
+    <div id="container">
+      <div id="airport">
+        <div id="terminal"><img src="img/terminal.jpg" /></div>
+        <div id="runway"><img src="img/runway.png" /><img src="img/runway.png" /></div>
+        <div id="boeing"><img src="img/lufthansa.jpg" /></div>
+        <div onclick="airbus.style.top = 220px" id="airbus"><img src="img/a320.jpg" /></div>
+        <div id="endOfRunway"><img src="img/end.jpg" /></div>
+      </div>
+    </div>
     <script type="text/javascript" src="js/airport.js"></script>
   </body>
 </html>
