--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <p>Instructions: <br>Quick! You've just landed and are an hour late! Get to the terminal to drop off the passengers, pick up new ones, and depart again. But if you make too many moves on the ground, you won't have enough fuel for the flight, so only move where you need to.</p>
         <div id="terminal"><img src="img/terminal.jpg"></div>
         <div id="runway"><img src="img/runway.png"><img src="img/runway.png"></div>
-        <div id="boeing"><img id="boeingImg" src="img/lufthansa.jpg"></div>
-        <div id="airbus"><img src="img/a320.jpg"></div>
+        <div id="boeing"><img id="boeingImg" src="img/lufthansa1.png"></div>
+        <div id="airbus"><img src="img/a320.png"></div>
         <div id="endOfRunway"><img src="img/end.jpg"></div>
       </div>
     </div>
